[project]
requires-python = ">=3.10"
description = "Utility Classes and Functions that are handy across multiple projects"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
keywords = [
  ""
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
name = "datatypes"
dynamic = [
  "version"
]
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.urls]
Homepage = "https://github.com/Jaymon/datatypes"
Repository = "https://github.com/Jaymon/datatypes"

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*",
  "*_test*",
  "docs*"
]
include = [
  "datatypes*"
]

[tool.setuptools.dynamic]
version = { attr = "datatypes.__version__" }

